srkSetSubProject(${SRK_PROJ_PREFIX})
set(OUTPUT_NAME srk-core)
set_property(GLOBAL PROPERTY SRKPROJ_CORE_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_CORE_INCLUDE ${PROJECT_SOURCE_DIR}/src/)
set_property(GLOBAL PROPERTY SRKPROJ_CORE_DLL ${SRK_PROJECT_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

include_directories(src)
file(GLOB_RECURSE srcFiles "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${srcFiles})
target_compile_definitions(${PROJECT_NAME} PRIVATE ${SRK_DEFINITIONS} -DSRK_CORE_EXPORTS)

if (NOT SRK_OS_WINDOWS)
    target_link_libraries(${PROJECT_NAME} dl)
endif ()

set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${PROJECT_NAME})

#set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})
#install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})