srkSetSubProject(${SRK_PROJ_PREFIX})

set(OUTPUT_NAME ${SRK_OUTPUT_NAME_PREFIX}framework)
set_property(GLOBAL PROPERTY SRKPROJ_FRAMEWORK_NAME ${PROJECT_NAME})
set_property(GLOBAL PROPERTY SRKPROJ_FRAMEWORK_INCLUDE ${PROJECT_SOURCE_DIR}/src/)
set_property(GLOBAL PROPERTY SRKPROJ_FRAMEWORK_DLL ${SRK_PROJECT_BUILD_DIR}/${CMAKE_SHARED_LIBRARY_PREFIX}${OUTPUT_NAME}${SRK_BUILD_TYPE_SUFFIX}${SRK_DLL_SUFFIX})

get_property(SRKPROJ_CORE_NAME GLOBAL PROPERTY "SRKPROJ_CORE_NAME")
get_property(SRKPROJ_CORE_INCLUDE GLOBAL PROPERTY "SRKPROJ_CORE_INCLUDE")

file(GLOB_RECURSE srcFiles "src/*.h" "src/*.cpp")
srkAddLibrarySourceGroup(${PROJECT_NAME} SHARED ${srcFiles})
target_include_directories(${PROJECT_NAME} PUBLIC
    src
    ${SRKPROJ_CORE_INCLUDE}
)
target_compile_definitions(${PROJECT_NAME} PRIVATE ${SRK_DEFINITIONS} -DSRK_FW_EXPORTS)
add_dependencies(${PROJECT_NAME} 
    ${SRKPROJ_CORE_NAME}
)
set(linkLibs)
if (SRK_OS_WINDOWS)
    list(APPEND linkLibs dxgi.lib winmm.lib)
endif ()
target_link_libraries(${PROJECT_NAME}
    ${SRKPROJ_CORE_NAME}
    ${linkLibs}
)
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME ${OUTPUT_NAME})
srkInstall(${PROJECT_NAME})

#set(CMAKE_INSTALL_PREFIX ${PROJECT_BINARY_DIR})
#install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})